# neuralnet

./: CMakeLists.txt  LICENSE
data/: test.csv  train.csv  train1.csv  train2.csv
helpers/: dthelp.py  index.py
include/: dataset.hpp  layer.hpp  network.hpp  neurone.hpp  rand.hpp
src/: dmaker.cpp  main.cpp  mainclone.cpp  test  test.cpp
